[project]
name = "memos-mcp"
version = "0.2.0"
description = "Remote MCP server for Memos API (Streamable HTTP)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.3.2",
    "httpx>=0.27.0",
    "uvicorn>=0.30.0",
    "starlette>=0.37.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
